# subtitle-generator

./: README.md
backend/: database_engine.py  main.py  pyproject.toml  registry.py
backend/manager/asr/: asr_model_adapter.py  funasr_model_manager.py  silero_vad_model_manager.py  whisper_model_manager.py
backend/manager/asr/interface/: asr_model_manager.py  vad_model_manager.py
backend/manager/audio_preprocess/interface/: vad_model_manager.py
backend/manager/message_search/: netease_music_web_search_manager.py  zhipu_web_search_manager.py
backend/manager/message_search/interface/: web_search_manager.py
backend/manager/output_format/: json_formatter.py  lrc_formatter.py  output_format_manager.py  srt_formatter.py  tsv_formatter.py  txt_formatter.py  vtt_formatter.py
backend/manager/output_format/interface/: base_formatter.py
backend/model/: asr_model_config.py  asr_output_formatter.py  output_format.py  web_search_result.py  whisper_model_manager.py
backend/model/asr/: load_asr_model_request.py  timestamp.py
backend/model/output_format/: format_segment.py  output_format.py
backend/router/: asr_router.py  output_format_router.py
