[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "faster-whisper>=1.2.1",
    "funasr>=1.3.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
